Fri Jun  7 11:25:56 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c: introduce oldgen bitmap for preparing performance tuning.

Fri Jun  7 11:20:57 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (MARKED_IN_BITMAP, MARK_IN_BITMAP, CLEAR_IN_BITMAP): bring
	  bitmap macros in one place, and introduce BITMAP_BIT.

Fri Jun  7 11:18:35 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* array.c (ary_new): change order of allocation in order
	  to remove FL_OLDGEN operation.

Fri Jun  7 11:16:28 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* tool/rdocbench.rb: add gc total time infomation.

Fri Jun  7 10:12:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove "Sunny" terminology.
	  "Sunny" doesn't mean antonym of "Shady" (questionable, doubtful, etc).
	  Instead of "Sunny", use "non-shady" or "normal".

Fri Jun  7 09:29:33 2013  Kenta Murata  <mrkn@cookpad.com>

	* bignum.c (rb_int_import): explicitly casting BDIGIT_DBL to BDIGIT
	  to prevent warning.

Fri Jun  7 07:29:33 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_int_export): countp argument is split into
	  wordcount_allocated and wordcount.

	* bignum.c (rb_int_export): Follow the above change.

	* pack.c (pack_pack): Ditto.

Fri Jun  7 07:17:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: describe a compatibility issue of Numeric#quo
	  introduced at r41109.

Fri Jun  7 07:15:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: fix style.

Fri Jun  7 06:48:17 2013  Benoit Daloze  <eregontp@gmail.com>

	* numeric.c: remove unused ID id_to_r introduced in r41109.

Fri Jun  7 06:15:31 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_int_import): New function.
	  (int_import_push_bits): Ditto.

	* internal.h (rb_int_import): Declared.

	* pack.c (pack_unpack): Use rb_int_import for BER compressed integer.

Thu Jun  6 22:24:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (num_quo): Use to_r method to convert the receiver to
	  rational.  [ruby-core:41575] [Bug #5736]
